system/gatekeeper-sap-policies/tests/fixtures/libtest-validation/configmap-invalid-region.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-invalid-region
  namespace: default
  annotations:
    region: notaregion
data: {}
