system/gatekeeper-sap-policies/tests/fixtures/libtest-validation/configmap-valid-region.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-valid-region
  namespace: default
  annotations:
    region: eu-de-1
data: {}
