system/gatekeeper-sap-policies/tests/fixtures/outdated-mirrors/pod-clean-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-clean-image
  namespace: default
spec:
  containers:
    - name: app
      image: keppel.eu-de-1.cloud.sap/ccloud/app:1
