system/gatekeeper-sap-policies/tests/fixtures/outdated-mirrors/pod-dockerhub-archive.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-dockerhub-archive
  namespace: default
spec:
  containers:
    - name: bar
      image: keppel.eu-de-1.cloud.sap/ccloud-dockerhub-archive/bar:1
