system/gatekeeper-sap-policies/tests/fixtures/outdated-mirrors/pod-dockerhub-mirror.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-dockerhub-mirror
  namespace: default
spec:
  containers:
    - name: foo
      image: keppel.eu-de-1.cloud.sap/ccloud-dockerhub-mirror/sapcc/foo:1
