system/gatekeeper-sap-policies/tests/fixtures/prometheusrule-alert-labels/rule-complete.yaml
apiVersion: monitoring.coreos.com/v1
kind: PrometheusRule
metadata:
  name: rule-complete
  namespace: default
spec:
  groups:
    - name: example.alerts
      rules:
        - alert: SomethingCritical
          expr: up == 0
          labels:
            severity: critical
            playbook: https://example.com/playbooks/something-critical
            support_group: myteam
          annotations:
            description: something is wrong
            summary: something is wrong
