system/gatekeeper-sap-policies/tests/fixtures/restrict-monsoon3-namespace/secret-andromeda-global-allowed.yaml
apiVersion: v1
kind: Secret
metadata:
  name: sh.helm.release.v1.andromeda.v1
  namespace: monsoon3global
  labels:
    owner: helm
    status: deployed
type: helm.sh/release.v1
data:
  release: ""
