system/gatekeeper-sap-policies/tests/fixtures/restrict-monsoon3-namespace/secret-default-namespace-unbound.yaml
apiVersion: v1
kind: Secret
metadata:
  name: sh.helm.release.v1.evil.v1
  namespace: default
  labels:
    owner: helm
    status: deployed
type: helm.sh/release.v1
data:
  release: ""
