system/gatekeeper-sap-policies/tests/fixtures/restrict-monsoon3-namespace/secret-neutron-allowed.yaml
apiVersion: v1
kind: Secret
metadata:
  name: sh.helm.release.v1.neutron.v1
  namespace: monsoon3
  labels:
    owner: helm
    status: deployed
type: helm.sh/release.v1
data:
  release: ""
